--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #330329;
+    background-color: #344746;
     text-align: center;
     margin: 0;
     padding: 0;
@@ -13,13 +13,13 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
-    background-color: #fff;
-    box-shadow: 10px 5px 10px rgba(234, 231, 231, 0.2);
+    background-color: #9e9999;
+    box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.445);
     border-radius: 10px;
 }
 
 h1 {
-    color: #333;
+    color: #161616;
 }
 
 label {
@@ -58,13 +58,4 @@ button {
     font-size: 28px;
     font-weight: 40;
     color: #014b4a;
-}
-
-footer{
-    display: flex;
-    color: #fff;
-    justify-content: center;
-    align-items: center;
-    margin-top: 44%;
-    margin-bottom: 5%;
 }
